إضافة موسيقى الصمود وتحسين أزرار الخروج والتأكيد

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                 <h4>التحكم بالابتوب :</h4>
                 <ul>
                     <li>الأسهم: تحريك رائد الفضاء</li>
-                    <li>F1: التفاعل مع الكمبيوتر</li>
-                    <li>F3: اضغط مرتين للخروج من المركبة</li>
+                    <li>النقر بالماوس: التفاعل مع الكمبيوتر</li>
+                    <li>النقر بالماوس: الخروج من المركبة</li>
                 </ul>
             
                 <h4>التحكم بالتابلت :</h4>
                 <ul>
                     <li>عصا التحكم: تحريك رائد الفضاء</li>
-                    <li>🎮️: التفاعل مع الكمبيوتر</li>
-                    <li>🚪: اضغط مرتين للخروج من المركبة</li>
+                    <li>🎮: التفاعل مع الكمبيوتر</li>
+                    <li>🚪: الخروج من المركبة</li>
                 </ul>
 
             </div>
@@ -67,5 +67,3 @@
     
 </body>
 </html>
-
-
