--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
-    <title>رحلة رائد الفضاء - اللعبة</title>
+    <title>رحلة رائدة الفضاء - اللعبة</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
