--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
-    <title>رحلة رائد الفضاء - الصفحة الرئيسية</title>
+    <title>رحلة رائدة الفضاء - الصفحة الرئيسية</title>
     <style>
         * {
             margin: 0;
@@ -427,7 +427,7 @@
     </div>
     
     <div class="container">
-        <h1 class="logo">رحلة رائد الفضاء</h1>
+        <h1 class="logo">رحلة رائدة الفضاء</h1>
         <p class="subtitle">مغامرة فضائية مثيرة في أعماق الكون</p>
         
         <div class="menu-buttons">
