--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
-    <title>رحلة رائد الفضاء</title>
+    <title>رحلة رائدة الفضاء</title>
     <style>
         body {
             margin: 0;
@@ -47,8 +47,8 @@
 <body>
     <div class="loading">
         <div class="spinner"></div>
-        <h2>🚀 جاري التحميل...</h2>
-        <p>رحلة رائد الفضاء</p>
+        <h2> جاري التحميل...</h2>
+        <p> رحلة رائدة الفضاء</p>
     </div>
 
     <!-- عنصر الموسيقى -->
