--- a/test-fullscreen.html
+++ b/test-fullscreen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover, maximum-scale=1.0, minimum-scale=1.0">
-    <title>اختبار ملء الشاشة بالكامل - رحلة رائد الفضاء</title>
+    <title>اختبار ملء الشاشة بالكامل - رحلة رائدة الفضاء</title>
     <style>
         * {
             margin: 0;
